add weight_shift configurable param for walk_gait and discontinuous_gait

--- a/spotmicro/config/motion_controllers.yaml
+++ b/spotmicro/config/motion_controllers.yaml
@@ -1,7 +1,9 @@
 walk:
   type: motion_control/WalkController
+  weight_shift: 0.025
 discontinuous:
   type: motion_control/DiscontinuousGaitController
+  weight_shift: 0.025
 joint_state_controller:
   type: joint_state_controller/JointStateController
 servo_pwm_controller:
